improved documentation syntax

--- a/base/snippets.scss
+++ b/base/snippets.scss
@@ -1,6 +1,12 @@
-// Any non-site-specific tools and code snippets
+/**
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * snippets.scss
+ * Any non-site-specific tools and code snippets
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
 
-// Returns a unitless number
+/**
+ * Returns a unitless number
 @function no-unit($number) {
     $result: 0;
     @if unit($number) == "px" {
@@ -13,7 +19,9 @@
     @return $result;
 }
 
-// Converts a px value to ems. Should only work in absolute em document context (root level)
+/**
+ * Converts a px value to ems. Should only work in absolute em document context (root level)
+ */
 @function px-to-ems($value) {
     @if unit($value) == "px" {
         $value : no-unit($value) / no-unit($base-font-size);
@@ -22,7 +30,9 @@
     @return $value;
 }
 
-// Converts an em value to px. Should only work in absolute em document context (root level)
+/**
+ * Converts an em value to px. Should only work in absolute em document context (root level)
+ */
 @function em-to-px($value) {
     @if unit($value) == "em" {
         $value : no-unit($value) * no-unit($base-font-size);
@@ -31,18 +41,24 @@
     @return $value;
 }
 
-// cross-browser rem units.
+/**
+ * cross-browser rem units.
+ */
 @mixin rem($property, $value) {
     #{$property}: #{$value}rem;
     #{$property}: $value * $base-font-size;
 }
 
-// embosses box
+/**
+ * embosses box
+ */
 @mixin box-emboss($opacity, $opacity2){
     box-shadow: white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
 }
 
-// Gradient with background color fallback for legacy browsers
+/**
+ * Gradient with background color fallback for legacy browsers
+ */
 @mixin gradient-with-bgc($colors...) {
     @include background(linear-gradient($gradient-startpoint, $colors...));
     $length: length($colors);
@@ -54,7 +70,9 @@
     //background-color: mix($colors...);
 }
 
-// Gradient with svg fallback for ie9
+/**
+ * Gradient with svg fallback for ie9
+ */
 @mixin gradient-with-svg($colors...) {
     $experimental-support-for-svg: true;
     @include background(linear-gradient($gradient-startpoint, $colors...));
@@ -66,7 +84,9 @@
     background-color: nth($colors, $middle);
 }
 
-// resets lists
+/**
+ * resets lists
+ */
 %plain-list {
     list-style: none;
     padding-left: 0;
@@ -77,22 +97,27 @@
     }
 }
 
-// block item  - where text needs to be hidden for image replacement (usually)
+/**
+ * block item  - where text needs to be hidden for image replacement (usually)
+ */
 @mixin block-item($x, $y: $x) {
     @extend %block-properties;
     padding-top: $y;
     width: $x;
 }
 
-//block item helper
+/**
+ * block item helper
+ */
 %block-properties {
     overflow: hidden;
     height: 0;
     display: block;
 }
 
-
-// new clearfix hack
+/**
+ * new clearfix hack
+ */
 @mixin clearfix {
     &:before,
     &:after {
@@ -109,8 +134,11 @@
     *zoom: 1;
 }
 
-// selection color
-// includes futureproofing for support of gradients (not surrently in spec)
+
+/**
+ * selection color
+ * includes futureproofing for support of gradients (not surrently in spec)
+ */
 @mixin selection-color($background, $color: false, $text-shadow: false) {
     ::selection
     {
@@ -138,7 +166,9 @@
     }
 }
 
-// For future support for blend modes. Can be tested in Chromium
+/**
+ * For future support for blend modes. Can be tested in Chromium
+ */
 @mixin blend-mode($mode) {
     -webkit-blend-mode: $mode;
     -moz-blend-mode: $mode;
@@ -146,25 +176,38 @@
     blend-mode: $mode;
 }
 
-// code font
+/**
+ * code font
+ */
 %codeFont { font-family: "inconsolata", "droid-sans-mono", "Lucida Console", monospace!important; }
 
-// common white frame core
+
+/**
+ * common white frame core
+ */
 %standard-padding {
     padding: 10/16 * $grid-padding $grid-padding $grid-padding;
 }
 
-// better than writing longhand rgba for transparent black
+
+/**
+ * better than writing longhand rgba for transparent black
+ */
 @function black($opacity){
     @return rgba(0, 0, 0, $opacity);
 }
 
-// better than writing longhand rgba for transparent white
+
+/**
+ * better than writing longhand rgba for transparent white
+ */
 @function white($opacity){
     @return rgba(255, 255, 255, $opacity);
 }
 
-// multi-line text-overflow
+/**
+ * multi-line text-overflow
+ */
 @mixin text-overflow($height, $color: #fff) {
     @extend %text-overflow;
     height: $height;
@@ -181,7 +224,9 @@
     }
 }
 
-// helper for above
+/**
+ * helper for above
+ */
 %text-overflow {
     overflow: hidden;
 
@@ -212,7 +257,9 @@
     }   
 }
 
-// Sets border-box, as well as width, height, padding and border width, including legacy fallbacks
+/**
+ * Sets border-box, as well as width, height, padding and border width, including legacy fallbacks
+ */
 @mixin legacy-border-box($width: auto, $height: auto, $padding: 0 0 0 0, $border-width: 0 0 0 0) {
     @extend %border-box;
 
@@ -230,11 +277,18 @@
     }
 }
 
-// border box extend
+
+/**
+ * border box extend
+ */
 %border-box {
     @include box-sizing(border-box);
 }
 
+
+/**
+ * centers a grid wrapper
+ */
 %center-grid {
     float: none;
     display: block;
@@ -242,27 +296,50 @@
     position: relative;
 }
 
-%center-text { text-align: center; }
 
-%left { float: left; }
-
-%right { float: right; }
-
-%clear { clear: both; }
-
-%inline { display: inline; }
-
-%hidden { display: none; }
-
-%bold { font-weight: bold; }
-
-%no-margin { margin: 0; }
-
-%no-padding { padding: 0; }
-
+/**
+ * removes border
+ */
 %no-border {
     border-style: none;
     border-width: 0;
 }
 
-%omega { margin-right: 0!important; }
+
+/**
+ * susy grid forced omega
+ */
+%force-omega { margin-right: 0!important; }
+
+
+/**
+ * forces has Layout for legacy IEs
+ */
+%hasLayout {
+    position: relative;
+    zoom: 1;
+}
+
+%no-mobile {
+    display: none;
+    @include at-breakpoint($tablet) { display: inline; }
+}
+
+%mobile-only {
+    display: inline-block!important;
+    @include at-breakpoint($tablet) { display: none!important; }
+}
+
+@mixin vendor($property, $value) {
+    @each $vendor in webkit, moz, ms, o {
+        #{$property}: -#{$vendor}-#{$value};
+    }
+    #{$property}: #{$value};
+}
+
+@mixin vendor-property($property, $value) {
+    @each $vendor in webkit, moz, ms, o {
+        -#{$vendor}-#{$property}: #{$value};
+    }
+    #{$property}: #{$value};
+}
