--- a/base/tags.scss
+++ b/base/tags.scss
@@ -1,7 +1,9 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// tags.scss
-// Any Typography and bare tag styles
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * tags.scss
+ * Any Typography and bare tag styles
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
 
 body, html {
     width: 100%;
