--- a/layout/grids.scss
+++ b/layout/grids.scss
@@ -1,4 +1,6 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// grids.scss
-// Any Custom grid classes
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * grids.scss
+ * Any Custom grid classes
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
