--- a/layout/layout-patterns.scss
+++ b/layout/layout-patterns.scss
@@ -1,4 +1,6 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// layout-patterns.scss
-// Any other common layout patterns
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * layout-patterns.scss
+ * Any other common layout patterns
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
