--- a/modules/common-modules.scss
+++ b/modules/common-modules.scss
@@ -1,4 +1,6 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// common-modules.scss
-// Common extensible block/element modules
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * common-modules.scss
+ * Common extensible block/element modules
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
