--- a/shame.scss
+++ b/shame.scss
@@ -1,5 +1,7 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// shame.scss
-// For all naughty overrides that don't fit anywhere else, 
-// eg: excessive !importants and other shameful practise
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * shame.scss
+ * For all naughty overrides that don't fit anywhere else, 
+ * eg: excessive !importants and other shameful practise
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
