--- a/print.scss
+++ b/print.scss
@@ -1,7 +1,9 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// print.scss
-// Simple print stylesheet, sets some sensible defaults
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * print.scss
+ * Simple print stylesheet, sets some sensible defaults
+ * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
 
 
 @import "base/variables";
