--- a/screen-legacy.scss
+++ b/screen-legacy.scss
@@ -1,18 +1,25 @@
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-// screen-legacy.scss
-// Master template for legacy browsers (ie8 and below)
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/**
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * screen-legacy.scss
+ * Master template for legacy browsers (ie8 and below)
+ * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ */
 
-
-//import css frameworks
+/**
+ * import css frameworks
+ */
 @import 'compass';
 @import 'susy';
 
-//breakpoint output settings for modern browsers
+/**
+ * breakpoint output settings for modern browsers
+ */
 $breakpoint-media-output  : false;
 $breakpoint-ie-output     : true;
 
-//vendor prefixes aren't needed for legacy
+/**
+ * vendor prefixes aren't needed for legacy
+ */
 $experimental-support-for-mozilla : false;
 $experimental-support-for-webkit : false;
 $support-for-original-webkit-gradients : false;
@@ -21,8 +28,12 @@ $experimental-support-for-microsoft : false;
 $experimental-support-for-khtml : false;
 $experimental-support-for-svg: false;
 
-//legacy support
+/**
+ * legacy support
+ */
 $legacy-support-for-ie: true;
 
-//import styles
+/**
+ * import styles
+ */
 @import "screen";
