Better documentation yet again

--- a/print.scss
+++ b/print.scss
@@ -1,5 +1,9 @@
 /**
- * Simple print stylesheet, sets some sensible defaults.
+ * Simple print stylesheet, sets some sensible defaults
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
 @import "base/variables";
 
