--- a/screen.scss
+++ b/screen.scss
@@ -1,9 +1,10 @@
 /**
- * Template that imports other files. Add your custom files
+ * Template that imports all other files. Add your custom files
  * Compiled down to css via screen-modern/legacy 
- * 
+ *
  * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
  * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
 @import "compass";
 @import "susy";
