--- a/base/fonts.scss
+++ b/base/fonts.scss
@@ -1,11 +1,12 @@
 /**
- * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * fonts.scss
  * Fontface declarations and font extends
- * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
 
-
+// @todo add your font filenames
 //@include font(Fontname, fonts/Fontname-webfont, bold, italic);
 //@include font(Fontname, fonts/Fontname-webfont, bold);
 //@include font(Fontname, fonts/Fontname-webfont, normal, italic);
