--- a/layout/grids.scss
+++ b/layout/grids.scss
@@ -1,6 +1,7 @@
 /**
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * grids.scss
  * Any Custom grid classes
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
