--- a/layout/layout-patterns.scss
+++ b/layout/layout-patterns.scss
@@ -1,6 +1,7 @@
 /**
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * layout-patterns.scss
  * Any other common layout patterns
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
