--- a/modules/common-modules.scss
+++ b/modules/common-modules.scss
@@ -1,6 +1,7 @@
 /**
- * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * common-modules.scss
  * Common extensible block/element modules
- * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
