--- a/base/tags.scss
+++ b/base/tags.scss
@@ -1,8 +1,9 @@
 /**
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * tags.scss
  * Any Typography and bare tag styles
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
 
 body, html {
