--- a/shame.scss
+++ b/shame.scss
@@ -1,7 +1,8 @@
 /**
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
- * shame.scss
  * For all naughty overrides that don't fit anywhere else, 
- * eg: excessive !importants and other shameful practise
- * +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ * eg: quick & dirty !importants and other shameful practise
+ *
+ * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
+ * @author Hemi Ormsby <hemi@panmedia.co.nz>
+ * @url https://github.com/tbredin/OnionKnight
  */
