removed site specific reference
git-svn-id: https://github.com/PANmedia/OnionKnight.git/trunk@23 3254bc33-fd20-d46e-65cb-ce57b7db7bff

--- a/print.scss
+++ b/print.scss
@@ -62,11 +62,13 @@
             line-height: 1.6;
             text-decoration: none!important;
         }
+        // @todo add your domain
         a[href^="/"]:after {
-          content: " (http://www.heathcotes.co.nz" attr(href) ") ";
+          content: " (http://www.yourdomain.co.nz" attr(href) ") ";
         }
+        // @todo add your domain
         a[href^="#"]:after {
-          content: " (http://www.heathcotes.co.nz" attr(href) ") ";
+          content: " (http://www.yourdomain.co.nz" attr(href) ") ";
         }
     }
 
