fixed broken comments & variable names

--- a/base/fonts.scss
+++ b/base/fonts.scss
@@ -7,11 +7,14 @@
  */
 
 // @todo add your font filenames
+
+//$font-family: "Fontname", Helvetica, Arial, sans-serif;
+
 //@include font(Fontname, fonts/Fontname-webfont, bold, italic);
 //@include font(Fontname, fonts/Fontname-webfont, bold);
 //@include font(Fontname, fonts/Fontname-webfont, normal, italic);
 //@include font(Fontname, fonts/Fontname-webfont);
 
 // %Fontname {
-//     font-family: "Fontname", Helvetica, Arial, sans-serif;
+//     font-family: $font-family;
 // }
