--- a/print.scss
+++ b/print.scss
@@ -74,7 +74,7 @@
 
     h1, h2, th {
         text-transform: uppercase;
-        font-family: Helvetica,Arial,sans-serif;
+        font-family: $font-family;
     }
 
     h2, h3 {
