--- a/base/tags.scss
+++ b/base/tags.scss
@@ -17,14 +17,14 @@ code {
 }
 
 h1, h2, h3, h4, h5, h6, p, dl, dd, hr, ul, ol, table {
-    margin-bottom: $gutter;
+    margin-bottom: $gutter-width;
     line-height: 1.6;
 }
 
 h1, h2, h3, h4 {
     text-shadow: #fff 0 1px 0;
     margin-bottom: 0;
-    padding-top: $gutter / 2;
+    padding-top: $gutter-width / 2;
 
     &:first-child {
         padding-top: 0;
