more typography & vertical rhythm (p tags)
git-svn-id: https://github.com/PANmedia/OnionKnight.git/trunk@31 3254bc33-fd20-d46e-65cb-ce57b7db7bff

--- a/base/tags.scss
+++ b/base/tags.scss
@@ -106,6 +106,10 @@ dd, p, li, td, th {
     @include adjust-font-size-to($p-size)
 }
 
+p {
+    @include rhythm(0, 0, 0.5, 0, $p-size);
+}
+
 a:hover { text-decoration: none; }
 
 hr {
